Add class method and Update css wireframes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/objects.css" />
+    <link rel="stylesheet" href="css/classes.css" />
     <title>Awesome Books</title>
   </head>
   <body>
     <main>
-      <h1>Awesome books</h1>
+      <h2 class="title">All awesome books</h2>
       <div class="bookList"></div>
+      <h2 class="formAdd">Add a new book</h2>
       <form class="formInput">
         <ul>
           <li>
@@ -25,6 +27,7 @@
         </ul>
       </form>
     </main>
-    <script src="main.js"></script>
+    <script src="js/objects.js"></script>
+    <script src="js/classes.js"></script>
   </body>
 </html>
