Add class method and Update css wireframes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <main>
       <h2 class="title">All awesome books</h2>
-      <div class="bookList"></div>
-      <h2 class="formAdd">Add a new book</h2>
-      <form class="formInput">
+      <div class="book-list"></div>
+      <h2 class="form-add">Add a new book</h2>
+      <form class="form-input">
         <ul>
           <li>
             <input type="text" name="title" placeholder="Title" required />
