--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/objects.css" />
-    <link rel="stylesheet" href="css/classes.css" />
+    <link rel="stylesheet" href="classes.css" />
     <title>Awesome Books</title>
   </head>
   <body>
@@ -27,7 +26,6 @@
         </ul>
       </form>
     </main>
-    <script src="js/objects.js"></script>
-    <script src="js/classes.js"></script>
+    <script src="classes.js"></script>
   </body>
 </html>
