Edit CSS styling and create auto date with JS

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
       </section>
 
       <!-- Contact -->
-      <section id="contact-infos">
-        <h1>Contact information</h1>
-        <p>
+      <section id="contact-infos" class="contact-info">
+        <h1 class="title">Contact information</h1>
+        <p class="contact-p">
           Do you have any questions or you just want to say "Hello"?<br />You
           can reach out to us!
         </p>
-        <ul>
+        <ul class="contact-list">
           <li>Our e-mail: mail@mail.com</li>
           <li>Our phone number: 0043586334433</li>
           <li>Our address: Ajose Adeogun, Utako Abuja, Nigeria</li>
